# django-boilerplate

./: .aiignore  .dockerignore  .gitignore  .prettierignore  Dockerfile  LICENSE  Pipfile  README.md  black_test.py  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  run  website.nginx.conf
db/: README.md
docker/: migrate.py  user_setup.py
frontend/: .gitignore  .yarnrc.yml  index.html  index.ts  package.json  style.scss  vite.config.js
media/: README.md
polls/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
polls/demo_data/: __init__.py
polls/migrations/: 0001_initial.py  0003_rename_vote_time_vote_created_at_answer_created_at_and_more.py  0004_demo_data.py  0005_answer_image_answer_image_height_answer_image_width.py  0006_alter_answer_image.py  0007_demo_images.py
polls/templates/polls/: base.html  question_detail.html  question_list.html  question_results.html  question_votes.html
website/: asgi.py  common_settings.py  dev_settings.py  prod_settings.py  settings.py  settings_test.py  urls.py  util.py  views.py  wsgi.py
website/frontend/templatetags/: frontend_extras.py
